--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^10.0|^11.0",
+        "illuminate/support": "*",
         "illuminate/console": "^10.0|^11.0",
         "nesbot/carbon": "^2.0"
     },
