--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,16 @@
     "name": "nobelzsushank/laravel-nepali-date",
     "description": "A Laravel package to convert English Date (A.D.) to Nepali Date (B.S.) and vice versa.",
     "type": "library",
+    "keywords": [
+        "nobelzsushank",
+        "laravel",
+        "laravel-nepali-date",
+        "nepali-date",
+        "nepali-date-converter",
+        "bsToAd",
+        "asToBs",
+        "bsad"
+    ],
     "homepage": "https://sushankpokharel.com.np",
     "license": "MIT",
     "authors": [
@@ -14,8 +24,8 @@
     "require": {
         "php": "^8.1",
         "illuminate/support": "*",
-        "illuminate/console": "^10.0|^11.0",
-        "nesbot/carbon": "^2.0"
+        "illuminate/console": "^9.0|^10.0|^11.0|^12.0",
+        "nesbot/carbon": "^2.0|^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -33,8 +43,8 @@
         }
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0|^9.0",
-        "phpunit/phpunit": "^10.0"
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
+        "phpunit/phpunit": "^10.0|^10.5|^11.0|^12.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
